--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
@@ -152,9 +152,11 @@
 <div id="myblank" style="padding-left: 15px;">
 	<p>
 		<b>
-			<h3 style="text-indent: 45px;">Перечень модулей, дисциплин</h3>
+			</b></p>
+<h3 style="text-indent: 45px;"><b>Перечень модулей, дисциплин</b></h3>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Правовое регулирование предпринимательской деятельности.</span>
 	</p>
@@ -192,16 +194,17 @@
 
 
 
-<div class="ms-rteElement-Callout4">
-	<div>Для записи на обучение необходимо представить:</div>
-	<ul>
-		<li>
-			<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
-		<li>
-			<font color="#03497e">
-				<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
-			</font>;</li>
-		<li>договоры:<ul>
+<div align="left">
+	<div class="ms-rteElement-Callout4" id="myblank" style="width: 570px;">
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
+		<ul>
+			<li>
+				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
+			<li>
+				<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>;
+			</li>
+			<li>договоры:<ul>
 				<li>
 					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
 				</li>
@@ -211,7 +214,9 @@
 			</ul>
 		</li>
 		<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
-	</ul>
-</div>
-<div>
+		</ul>
+		<div>
+			<br/>
+		</div>
+	</div>
 </div>
