--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/blank.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/blank.html
@@ -407,3 +407,22 @@ font-size: 14pt;
 		<li>другие документы (копия паспорта, копия документа об образовании, фотографии и др.)</li>
 	</ul>
 </div>
+
+
+
+
+<div align="center">
+	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
+		<ul>
+			
+			
+			
+			
+		</ul>
+		<div>
+			<br/>
+		</div>
+	</div>
+</div>
