--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
@@ -155,14 +155,18 @@
 <div id="myblank" style="padding-left: 15px;">
 	<p>
 		<b>
-			<h3 style="text-indent: 45px;">Перечень модулей, дисциплин</h3>
+			</b></p>
+<h3 style="text-indent: 45px;"><b>Перечень модулей, дисциплин</b></h3>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Модуль 1. Базовые дисциплины</h4>
+			</b></p>
+<h4 style="text-indent: 45px;"><b>Модуль 1. Базовые дисциплины</b></h4>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Теория государства и права.</span>
 	</p>
@@ -180,9 +184,11 @@
 	</p>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Модуль 2. Специальные дисциплины</h4>
+			</b></p>
+<h4 style="text-indent: 45px;"><b>Модуль 2. Специальные дисциплины</b></h4>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Муниципальное право России.</span>
 	</p>
@@ -225,7 +231,7 @@
 </div>
 
 
-<span style="display: inline-block;">
+<span id="myblank">
 
 	<h3 class="ms-rteElement-H3B">
 		<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
@@ -239,10 +245,10 @@
 
 
 
-
-<div>
-	<div class="ms-rteElement-Callout4">
-		<div>Для записи на обучение необходимо представить:</div>
+<div align="left">
+	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
 		<ul>
 			<li>
 				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
@@ -261,6 +267,8 @@
 			</li>
 			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
 		</ul>
+		<div>
+			<br/>
+		</div>
 	</div>
-
 </div>
