--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
@@ -144,9 +144,11 @@
 <div id="myblank" style="padding-left: 15px;">
 	<p>
 		<b>
-			<h3 style="text-indent: 45px;">Перечень модулей</h3>
+			</b></p>
+<h3 style="text-indent: 45px;"><b>Перечень модулей</b></h3>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<div style="text-align: left;">
 	<p>
 		<b>
@@ -155,71 +157,71 @@
 				</i>
 			</b>
 			<b>
-				<span > Общие положения контрактной системы</span>
+				<span> Общие положения контрактной системы</span>
 			</b>
 	</p>
-	<p >
+	<p>
 		<b>
 				<i>
-					<span >Модуль 2.</span>
+					<span>Модуль 2.</span>
 				</i>
 			</b>
 			<b>
-				<span >
+				<span>
 					Законодательство Российской Федерации о контрактной системе в &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;сфере закупок</span>
 			</b>
 	</p>
 	<p>
 		<b>
 				<i>
-					<span >Модуль 3.</span>
+					<span>Модуль 3.</span>
 				</i>
 			</b>
 			<b>
-				<span >
+				<span>
 					Планирование и обоснование закупок</span>
 			</b>
 	</p>
 	<p>
 		<b>
 				<i>
-					<span >Модуль 4.</span>
+					<span>Модуль 4.</span>
 				</i>
 			</b>
 			<b>
-				<span >
+				<span>
 					Осуществление закупок</span>
 			</b>
 	</p>
 	<p>
 		<b>
 				<i>
-					<span >Модуль 5.</span>
+					<span>Модуль 5.</span>
 				</i>
 			</b>
 			<b>
-				<span >Контракты</span>
+				<span>Контракты</span>
 			</b>
 	</p>
 	<p>
 		<b>
 				<i>
-					<span >Модуль 6.<span> </span>
+					<span>Модуль 6.<span> </span>
 					</span>
 				</i>
 			</b>
 			<b>
-				<span >Мониторинг, контроль, аудит и защита прав и интересов участников &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;закупок</span>
+				<span>Мониторинг, контроль, аудит и защита прав и интересов участников &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;закупок</span>
 			</b>
 	</p>
 	<p>
 		<b>
 				<i>
-					<span >Модуль 7.</span>
+					<span>Модуль 7.</span>
 				</i>
 			</b>
 			<b>
-				<span >Вариативная часть</span>
+				<span>Вариативная часть</span>
 			</b>
 	</p>
 	</div>
@@ -237,10 +239,13 @@
 
 		
 		
+
 		
 		
-<div class="ms-rteElement-Callout4">
-	<div>Для записи на обучение необходимо представить:</div>
+<div align="center">
+	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
 		<ul>
 			<li>
 				<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
@@ -258,9 +263,12 @@
 				</li>
 				</ul>
 				<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
-			</ul>
+		</ul>
+		<div>
+			<br/>
+		</div>
+	</div>
 </div>
-		
 		
 		
 		
@@ -276,27 +284,6 @@
 
 
 
-
-
-
-
-
-
-
-		<style>
-.ExternalClass p.MsoNormal, .ExternalClass li.MsoNormal, .ExternalClass div.MsoNormal
-{margin:0cm;margin-bottom:.0001pt;font-size:12.0pt;font-family:"Times New Roman",serif;}
-.ExternalClass .MsoChpDefault
-{font-size:10.0pt;}
-@page WordSection1
-{size:612.0pt 792.0pt;margin:2.0cm 42.5pt 2.0cm 3.0cm;}
-.ExternalClass div.WordSection1
-{page:WordSection1;}
-.ExternalClass ol
-{margin-bottom:0cm;}
-.ExternalClass ul
-{margin-bottom:0cm;}
-</style>
 		<span>
 			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80%D0%BD%D1%8B%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B8_%D0%A1%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%20%D0%B2%20%D1%81%D1%84%D0%B5%D1%80%D0%B5%20%D0%B7%D0%B0%D0%BA%D1%83%D0%BF%D0%BE%D0%BA_2018.pdf">Примерные
      практико-ориентированные задания к итоговой аттестации<span style="display: inline-block;">
@@ -312,7 +299,7 @@
 		<br/>
 		<br/>
 		<a target="_blank" href="/fil/smolensk/dpo/Pages/contacts.aspx">Контакты​</a>
-	</strong></div>
+	
 <strong>
 	<div>
 		<br/>
