--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
@@ -159,14 +159,18 @@
 <div id="myblank" style="padding-left: 15px;">
 	<p>
 		<b>
-			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
+			</b></p>
+<h3 style="text-indent: 45px;"><b>Перечень дисциплин</b></h3>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Базовые дисциплины</h4>
+			</b></p>
+<h4 style="text-indent: 45px;"><b>Базовые дисциплины</b></h4>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Экономическая теория (микроэкономика).</span>
 	</p>
@@ -181,9 +185,11 @@
 	</p>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Специальные дисциплины</h4>
+			</b></p>
+<h4 style="text-indent: 45px;"><b>Специальные дисциплины</b></h4>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Теория бухгалтерского учета.</span>
 	</p>
@@ -229,11 +235,14 @@
 
 
 
-<div class="ms-rteElement-Callout4">
-	<div>
-		<span>Для записи на обучение необходимо представить:</span>
-	</div>
-	<ul>
+
+<div align="center">
+	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
+		<ul>
+			
+			
 		<li>
 			<span>
 				<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</span>
@@ -273,9 +282,14 @@
 			<span>фотографии&#160;и&#160;др.)
 			</span>
 		</li>
-	</ul>
+			
+			
+		</ul>
+		<div>
+			<br/>
+		</div>
+	</div>
 </div>
-
 
 
 
