--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
@@ -156,14 +156,18 @@
 <div id="myblank" style="padding-left: 15px;">
 	<p>
 		<b>
-			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
+			</b></p>
+<h3 style="text-indent: 45px;"><b>Перечень дисциплин</b></h3>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Базовые дисциплины</h4>
+			</b></p>
+<h4 style="text-indent: 45px;"><b>Базовые дисциплины</b></h4>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Экономическая теория (микроэкономика).</span>
 	</p>
@@ -178,9 +182,11 @@
 	</p>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Специальные дисциплины</h4>
+			</b></p>
+<h4 style="text-indent: 45px;"><b>Специальные дисциплины</b></h4>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Финансовый менеджмент.</span>
 	</p>
@@ -222,12 +228,13 @@
 	
 	
 	
-	
-	
-	<div class="ms-rteElement-Callout4">
-	<div>Для записи на обучение необходимо представить:</div>
-	<ul>
-		<li>
+
+<div align="center">
+	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
+		<ul>
+			<li>
 			<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
 		<li>
 			<font color="#03497e">
@@ -249,7 +256,14 @@
 			</ul>
 		</li>
 		<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
-	</ul>
+			
+			
+			
+		</ul>
+		<div>
+			<br/>
+		</div>
+	</div>
 </div>
 
 	
@@ -283,7 +297,7 @@
 	<h3 class="ms-rteElement-H3B">
 		<a target="_blank" href="/fil/smolensk/dpo/Pages/contacts.aspx">Контакты​</a>
 	</h3>
-</div>
+
 <div>
 	<br/>
 </div>
