--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
@@ -137,14 +137,18 @@
 <div id="myblank" style="padding-left: 15px;">
 	<p>
 		<b>
-			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
+			</b></p>
+<h3 style="text-indent: 45px;"><b>Перечень дисциплин</b></h3>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Базовая часть</h4>
+			</b></p>
+<h4 style="text-indent: 45px;"><b>Базовая часть</b></h4>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Введение в языкознание.</span>
 	</p>
@@ -165,9 +169,11 @@
 	</p>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Профильная часть</h4>
+			</b></p>
+<h4 style="text-indent: 45px;"><b>Профильная часть</b></h4>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Теория перевода.</span>
 	</p>
@@ -199,10 +205,12 @@
 
 
 
-<div class="ms-rteElement-Callout4">
-	<div>Для записи на обучение необходимо представить:</div>
-	<ul>
-		<li>
+<div align="center">
+	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
+		<ul>
+			<li>
 			анкета;</li>
 		<li>
 			заявление;</li>
@@ -210,5 +218,9 @@
 			<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_qualification_Fiz_lico.docx">договор​</a>
 		</li>
 		<li>другие документы (копия паспорта, копия документа об образовании, фотографии и др.)</li>
-	</ul>
+		</ul>
+		<div>
+			<br/>
+		</div>
+	</div>
 </div>
