--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
@@ -298,8 +298,8 @@
 
 
 
-
-<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
+<div style="font-size:14pt;font-family:Times;">
+<h3 >Материалы для слушателей</h3>
 <ul>
 	<li>
 		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%A0%D0%95%D0%9A%D0%9E%D0%9C%D0%95%D0%9D%D0%94%D0%A3%D0%95%D0%9C%D0%AB%D0%95%20%D0%A2%D0%95%D0%9C%D0%AB%20%D0%92%D0%90%D0%A0%20%D0%91%D0%A3%202017-18%20%D0%B3%D0%B3_.pdf">Рекомендуемые темы выпускных аттестационных работ&#160;</a>
@@ -313,7 +313,7 @@
 		<br/>
 	</li>
 </ul>
-<h3 class="ms-rteElement-H3B">
+<h3>
 	<a target="_blank" href="/fil/smolensk/dpo/Pages/contacts.aspx">Контакты</a>
 </h3>
 <br/>
