--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
@@ -273,8 +273,8 @@
 	
 	
 	
-	
-	<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
+	<div style="font-size:14pt;font-family:Times;">
+	<h3 >Материалы для слушателей</h3>
 	<ul>
 		<li>
 			<a href="/fil/smolensk/dpo/Documents/Kval/%D0%A2%D0%B5%D0%BC%D1%8B%20%D0%92%D0%90%D0%A0-%20%D0%A4%D0%9C.pdf">Рекомендуемые темы</a>
@@ -294,14 +294,14 @@
 			<br/>
 		</li>
 	</ul>
-	<h3 class="ms-rteElement-H3B">
+	<h3 >
 		<a target="_blank" href="/fil/smolensk/dpo/Pages/contacts.aspx">Контакты​</a>
 	</h3>
 
 <div>
 	<br/>
 </div>
-
+</div>
 
 
 
