--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
@@ -4,7 +4,7 @@
 #myblank
 {font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
 .link
-{font-size:14pt;}
+{font-size:12pt;}
 </style>
 
 
@@ -161,14 +161,24 @@
 <div id="myblank" style="padding-left: 15px;">
 	<p>
 		<b>
-			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
 		</b>
 	</p>
+	<h3 style="text-indent: 45px;">
+		<b>Перечень дисциплин</b>
+	</h3>
+	<b>
+	</b>
+	<p/>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Базовые дисциплины</h4>
 		</b>
 	</p>
+	<h4 style="text-indent: 45px;">
+		<b>Базовые дисциплины</b>
+	</h4>
+	<b>
+	</b>
+	<p/>
 	<p>
 		<span>1. Базовые дисциплины.</span>
 	</p>
@@ -186,9 +196,14 @@
 	</p>
 	<p>
 		<b>
-			<h4 style="text-indent: 45px;">Специальные дисциплины</h4>
 		</b>
 	</p>
+	<h4 style="text-indent: 45px;">
+		<b>Специальные дисциплины</b>
+	</h4>
+	<b>
+	</b>
+	<p/>
 	<p>
 		<span>1. Специальные дисциплины.</span>
 	</p>
@@ -234,14 +249,16 @@
 
 
 
-	
-	
-	
-	
-	
-	<div class="ms-rteElement-Callout4">
-		<div>Для записи на обучение необходимо представить:</div>
+
+
+
+
+<div align="center">
+	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
 		<ul>
+
 			<li>
 				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
 			<li>
@@ -264,38 +281,45 @@
 				</ul>
 			</li>
 			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+
+
 		</ul>
+		<div>
+			<br/>
+		</div>
 	</div>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
-	<ul>
-		<li>
-			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
-				<span>Методические указания по написанию и защите выпускной&#160; аттестационной <br/>работы слушателями&#160; дополнительного профессионального образования (профессиональная переподготовка<span style="display: inline-block;">)</span>
-				</span>
-			</a>
-		</li>
-		<li>
-			<span>
-				<span style="display: inline-block;">
-					<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80%D0%BD%D0%B0%D1%8F%20%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B0%20%D0%92%D0%90%D0%A0%20%D0%AD%D0%BA%D0%BE%D0%BD%D0%BE%D0%BC%D0%B8%D0%BA%D0%B0%20%D1%82%D1%80%D1%83%D0%B4%D0%B0%2017-18.pdf">Примерная тематика ВАР</a>
-					<br/>
-				</span>
+</div>
+
+
+
+
+
+
+
+
+<div style="font-size: 14pt;
+font-family: Times;
+text-align: left;" >
+<h3 >Материалы для слушателей</h3>
+<ul>
+	<li id="link">
+		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
+			<span>Методические указания по написанию и защите выпускной&#160; аттестационной <br/>работы слушателями&#160; дополнительного профессионального образования (профессиональная переподготовка<span style="display: inline-block;">)</span>
 			</span>
-		</li>
-	</ul>
-	<h3 class="ms-rteElement-H3B">
-		<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
-	</h3>
+		</a>
+	</li>
+	<li id="link">
+		<span>
+			<span style="display: inline-block;">
+				<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80%D0%BD%D0%B0%D1%8F%20%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B0%20%D0%92%D0%90%D0%A0%20%D0%AD%D0%BA%D0%BE%D0%BD%D0%BE%D0%BC%D0%B8%D0%BA%D0%B0%20%D1%82%D1%80%D1%83%D0%B4%D0%B0%2017-18.pdf">Примерная тематика ВАР</a>
+				<br/>
+			</span>
+		</span>
+	</li>
+</ul>
+<h3 >
+	<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
+</h3>
 </div>
 <div>
 	<br/>
