--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.html
@@ -157,9 +157,11 @@
 <div id="myblank" style="padding-left: 15px;">
 	<p>
 		<b>
-			<h3 style="text-indent: 45px;">Перечень дисциплин</h3>
+			</b></p>
+<h3 style="text-indent: 45px;"><b>Перечень дисциплин</b></h3>
+<b>
 		</b>
-	</p>
+	<p></p>
 	<p>
 		<span>1. Экономика государственного и муниципального сектора.</span>
 	</p>
@@ -214,10 +216,14 @@
 		
 		
 		
-		
-	<div class="ms-rteElement-Callout4">
-		<div>Для записи на обучение необходимо представить:</div>
+
+	
+	<div align="center">
+	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
 		<ul>
+			
 			<li>
 				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
 			<li>
@@ -234,27 +240,22 @@
 				</ul>
 			</li>
 			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+			
+			
 		</ul>
+		<div>
+			<br/>
+		</div>
 	</div>
 
-	
-	
+
 
 	
 	
-	
-	
+	</div>
+	<div id="myblank" >
 		<h3 class="ms-rteElement-H3B">
 			<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
 		</h3>
-	</strong>
-</div>
-<strong>
-	<div>
-	</div>
-</strong>
-<strong>
-</strong>
-<strong>
-	<br/>
-</strong>
+		</div>
+
