--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
@@ -275,8 +275,8 @@
 		
 
 
-
-		<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
+<div style="font-size:14pt;font-family:Times;">
+		<h3 >Материалы для слушателей</h3>
 		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80%D0%BD%D1%8B%D0%B5%20%D0%B2%D0%BE%D0%BF%D1%80%D0%BE%D1%81%D1%8B_%D0%A1%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%20%D0%B2%20%D1%81%D1%84%D0%B5%D1%80%D0%B5%20%D0%B7%D0%B0%D0%BA%D1%83%D0%BF%D0%BE%D0%BA_2018.pdf">Примерные вопросы к итоговой аттестации</a>
 		<br/>
 
@@ -299,15 +299,8 @@
 		<br/>
 		<br/>
 		<a target="_blank" href="/fil/smolensk/dpo/Pages/contacts.aspx">Контакты​</a>
-	
-<strong>
-	<div>
-		<br/>
-	</div>
-</strong>
-<strong>
-<br/></strong>
 
+</div>
 
 
 
