--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
@@ -168,8 +168,9 @@
 	</h3>
 	<b>
 	</b>
-	<p/>
 	<p>
+	</p>
+<p>
 		<b>
 		</b>
 	</p>
@@ -178,21 +179,20 @@
 	</h4>
 	<b>
 	</b>
-	<p/>
 	<p>
-		<span>1. Базовые дисциплины.</span>
+	</p>
+
+	<p>
+		<span>1. Менеджмент.</span>
 	</p>
 	<p>
-		<span>2. Менеджмент.</span>
+		<span>2. Экономика организаций.</span>
 	</p>
 	<p>
-		<span>3. Экономика организаций.</span>
+		<span>3. Трудовое право.</span>
 	</p>
 	<p>
-		<span>4. Трудовое право.</span>
-	</p>
-	<p>
-		<span>5. Бухгалтерский учет.</span>
+		<span>4. Бухгалтерский учет.</span>
 	</p>
 	<p>
 		<b>
@@ -203,8 +203,9 @@
 	</h4>
 	<b>
 	</b>
-	<p/>
 	<p>
+	</p>
+<p>
 		<span>1. Специальные дисциплины.</span>
 	</p>
 	<p>
@@ -254,7 +255,7 @@
 
 
 <div align="center">
-	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+	<div class="ms-rteElement-Callout4" id="myblank" style="width: 570px;">
 		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
 		</h3>
 		<ul>
@@ -297,10 +298,8 @@
 
 
 
-<div style="font-size: 14pt;
-font-family: Times;
-text-align: left;" >
-<h3 >Материалы для слушателей</h3>
+<div style="font-size: 14pt; font-family: times; text-align: left;">
+<h3>Материалы для слушателей</h3>
 <ul>
 	<li id="link">
 		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
@@ -317,7 +316,7 @@ text-align: left;" >
 		</span>
 	</li>
 </ul>
-<h3 >
+<h3>
 	<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
 </h3>
 </div>
