Структура и органы управления образовательной организацией

--- a/src/com/company/Site/ru/fa/old/fil/smolensk/about/maindata/Pages/struktura.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/about/maindata/Pages/struktura.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-
-Рубрика 1. <span>
-	<a href="/fil/smolensk/about/maindata/Pages/inf_ruk.aspx">Информация о руководстве:</a>
-</span>
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: left;
+line-height: normal; 
+}
+</style>
+<div id="myblank">
 <br/>
-<br/>Рубрика 2. <span>
-	<a href="/fil/smolensk/Pages/new%20pages/Structural-division.aspx">Информация по каждому структурному подразделению:</a>
-	<a href="/fil/smolensk/Pages/new%20pages/Structural-division.aspx"/>
-</span>
-
-</body>
-</html>
+Рубрика 1. <a href="/fil/smolensk/about/maindata/Pages/inf_ruk.aspx">Информация о руководстве:</a>
+<br/><br/>
+Рубрика 2. <a href="/fil/smolensk/Pages/new%20pages/Structural-division.aspx">Информация по каждому структурному подразделению:</a>
+<br/>
+<br/>
+</div>
